Harshit | Fixed test overflow.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  */
 .limit {
     text-overflow: ellipsis;
-    width: 750px;
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
 }
